packages/core-components/src/components/multiselect-dropdown/multiselect-dropdown.scss
@use '../../global/b2b-styles';

:host {
  width: 100%;

  b2b-input-label {
    margin-bottom: var(--b2b-size-5);
    display: block;
  }

  span {
    display: block;
    color: var(--b2b-color-grey-300);
    font-size: var(--b2b-size-copy-50);
    line-height: var(--b2b-size-copy-line-height-75);
    font-family: var(--b2b-font-family-default);
    white-space: normal;
    overflow-wrap: break-word;
    max-width: 100%;
  }

  .b2b-multiselect-dropdown {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    min-width: 20rem;
    overflow: hidden;
    border: 1px solid var(--b2b-color-grey-200);
    border-radius: var(--b2b-size-border-radius-100);
    padding: 5px var(--b2b-size-20);
    max-height: 104px;
    background-color: var(--b2b-color-white-100);

    &--open {
      z-index: 1001;
      outline: 2px solid -webkit-focus-ring-color;
      outline-offset: -1px;
    }

    &--error {
      border: 1px solid var(--b2b-color-error-100);
      background-color: var(--b2b-color-error-50);
    }

    &--focused {
      z-index: 1001;
      outline: 2px solid var(--b2b-color-error-100);
      outline-offset: -1px;
    }

    &__chip-container {
      display: flex;
      flex-flow: row wrap;
      align-items: center;
      gap: 4px 0;
      width: calc(100% - 24px);
      padding: var(--b2b-size-1) 0;
    }

    &__placeholder {
      display: inline-flex;
      align-items: center;
      height: auto;
      line-height: normal;
      font-size: var(--b2b-size-copy-100);
      font-family: var(--b2b-font-family-default);
      color: var(--b2b-color-black-100);
      user-select: none;
      cursor: default;
      padding: 0;
      border-radius: var(--b2b-size-border-radius-100);
    }

    &__options-container {
      position: relative;
      display: none;

      &--visible {
        display: block;
      }
    }

    &__options {
      position: absolute;
      width: 100%;
      max-height: calc(8 * 39px);
      overflow-y: auto;
      margin: 0;
      background-color: var(--b2b-color-white-100);
      border-right: var(--b2b-size-1) solid var(--b2b-color-black-100);
      border-left: var(--b2b-size-1) solid var(--b2b-color-black-100);
      border-bottom: var(--b2b-size-1) solid var(--b2b-color-black-100);
      border-top: 2px none -webkit-focus-ring-color;
      box-sizing: border-box;
      z-index: 10;
    }

    &__option {
      &__search {
        width: 100%;

        &__input {
          width: calc(100% - 16px);
          font-size: var(--b2b-size-copy-100);
          line-height: var(--b2b-size-copy-line-height-100);
          font-family: var(--b2b-font-family-default);
          outline: none;
          border-bottom: 1px solid var(--b2b-color-grey-200);
          border-top: 0;
          border-left: 0;
          border-right: 0;
          padding: 8px 8px 10px;
        }
      }

      &__select-all {
        border-bottom: 1px solid var(--b2b-color-grey-200);
      }

      &__show-more-button {
        cursor: pointer;
      }
    }
  }

  .b2b-multiselect-dropdown--disabled {
    color: var(--b2b-color-grey-250);
    background-color: var(--b2b-color-grey-25);
    border: 1px solid var(--b2b-color-grey-200);
    cursor: not-allowed;
    pointer-events: none;

    .b2b-multiselect-dropdown__chip-container {
      opacity: 0.5;
    }

    .b2b-multiselect-dropdown__placeholder {
      color: var(--b2b-color-grey-300);
    }
  }

  .b2b-multiselect-dropdown__error-message {
    margin-top: var(--b2b-size-7);
    color: var(--b2b-color-error-100);
    font-size: var(--b2b-size-copy-50);
    line-height: var(--b2b-size-copy-line-height-75);
    font-family: var(--b2b-font-family-default);
    display: block;
  }

  .b2b-multiselect-dropdown__hint {
    margin-top: var(--b2b-size-7);
    font-size: var(--b2b-size-copy-50);
    line-height: var(--b2b-size-copy-line-height-75);
    font-family: var(--b2b-font-family-default);
    display: block;
  }
}

